Uppdaterat om SM resp SA-signaler
Se exv. SA6BUA och SM7BUA dvs suffixen är endast unika inom SA resp SM, men det vet du ju säkert

--- a/body.tex
+++ b/body.tex
@@ -95,7 +95,7 @@ Sverige delas in i följande distrikt efter sina län:
 \end{center}
 Distrikten förekommen som siffra i utdelade anropssignaler. Radioamatörer byter inte distriktsiffra under resa i annat distrikt, i stället används suffix (tillägg efter ordinarie signal) som t.ex. /M för mobil. Ofta uppger man "SM0UEI mobilt i SM3-land" för att påvisa att man befinner sig utanför ordinarie distrikt.
 
-I de tidigare SMnXYZ-signalerna förekom amatörens bokstavskombination endast en gång, det kunde alltså inte finnas en SM4UEI och en SM0UEI, det vore i så fall samma amatör som flyttat. Med det nya systemet där SSA m.fl. utdelar signaler i stället för PTS i serien SAnXYZ kan SA4XYZ och SA7XYZ alltså vara två helt olika amatörer.
+I de tidigare SMnXYZ-signalerna förekom amatörens bokstavskombination endast en gång, det kunde alltså inte finnas en SM4UEI och en SM0UEI, det vore i så fall samma amatör som flyttat. Med det nya systemet där SSA m.fl. utdelar signaler i stället för PTS i serien SAnXYZ kan SM4XYZ och SA7XYZ alltså vara två helt olika amatörer.
 \section{Terminologi och trafik}
 
 \subsection{Bokstaveringsalfabetet (Svenska)}
