--- a/qso.tex
+++ b/qso.tex
@@ -26,7 +26,7 @@ Därefter övergår radiosamtalet i dialog eller meddelandesändning.
 
 Används när man inte ropar på någon särskild motstation utan önskar samtal med vem som helst. På svenska använder man ofta just orden ''allmänt anrop'' medan på engelska är det vanligare att man uttalar CQ (seek you). Ett allmänt androp kan se ut såhär:
 
---- Allmänt anrop, allmänt anrop, allmänt androp från SM0UEI SM0UEI SM0UEI kallar allmänt anrop och lyssnar.
+--- Allmänt anrop, allmänt anrop, allmänt anrop från SM0UEI SM0UEI SM0UEI kallar allmänt anrop och lyssnar.
 
 Eller på engelska:
 
