Nya frekvenser tillagda för MF i sverige och HF internationellt ship-to-ship, båda i marina banden.

--- a/body-hf.tex
+++ b/body-hf.tex
@@ -55,9 +55,56 @@ Scouterna har frekvenser på HF likväl som VHF/UHF som de aktiverar vid särski
 	              &            50 160 & SSB             &  \\ \hline
 \end{tabular}
 
-
-
 Normalt aktiveras dessa frekvenser tredje veckoslutet i oktober varje år, fredag till söndag. Då kan det vara många klubbar som finns på frekvenserna och det är också vanligt att man hör dem på helt andra frekvenser. De frekvenser som listas här är inte på något vis de endra frekvenser som scouter använder.
+
+\subsection{Marina MF/HF-frekvenser}
+
+De marina HF-banden är uppdelade på ett antal band. Det finns en generell kanalindelning med 3 kHz per kanal och SSB som modulationssätt på respektive band. Marina HF-kanaler finns på banden 4, 6, 8, 12, 16, 18, 22 och 25 MHz. 
+
+MF även benämnd gränsvåg i marina sammanahang är inte lika ofta används som den var en gång i tiden. Nedan listas de frekvenser som används i Sverige.
+
+\subsubsection{Svenska MF-kanaler}
+
+\begin{longtable}{llrr}
+\textbf{Kanal} & \textbf{Placering} & \textbf{Skepp} & \textbf{Kust}  \\ \hline 
+\endhead
+
+MF1 & Gotland       & 2 099 & 1 6874 \\
+MF2 & ---           & ---  & ---   \\
+MF3 & Gislövshammar & 2 060 & 1 797  \\
+MF4 & Härnösand     & 2 216 & 2 733  \\
+MF5 & Bjuröklubb    & 2 123 & 1 779  \\
+MF6 & Grimeton      & 2 135 & 1 710
+\end{longtable}
+
+\subsubsection{Nödfrekvenser}
+
+\begin{longtable}{lrr}
+\textbf{Band} & \textbf{Frekvens} & \textbf{DSC Frekvens}\\ \hline \endhead
+
+MF   & 2 182  & 2 187.5  \\
+HF4  & 4 125  & 4 207.5  \\
+HF6  & 6 215  & 6 312.0  \\
+HF8  & 8 291  & 8 414.5  \\
+HF12 & 12 290 & 12 577.0 \\
+HF16 & 16 429 & 16 804.5 \\
+\end{longtable}
+
+\subsubsection{Primära HF skepp-till-skepp}
+
+\begin{longtable}{lrrrrrrrr}
+\textbf{Kanal} & \textbf{HF4} & \textbf{HF6} & \textbf{HF8} & \textbf{HF12} & \textbf{HF16} & \textbf{HF18} & \textbf{HF22} & \textbf{HF25} \\
+\hline
+\endhead
+
+A & 4 146 & 6 224 & 8 294 & 12 353 & 16 528 & 18 825 & 22 159 & 25 100 \\
+B & 4 149 & 6 227 & 8 297 & 12 356 & 16 531 & 18 828 & 22 162 & 25 103 \\
+C &       & 6 230 &       & 12 359 & 16 534 & 18 831 & 22 165 & 25 106 \\
+D &       &       &       & 12 362 & 16 537 & 18 834 & 22 168 & 25 109 \\
+E &       &       &       & 12 365 & 16 540 & 18 837 & 22 171 & 25 112 \\
+F &       &       &       &        & 16 543 & 18 840 & 22 174 & 25 115 \\
+G &       &       &       &        & 16 546 & 18 843 & 22 177 & 25 118 \\
+\end{longtable}
 
 \subsection{Fyrar}
 
