Uppdatering angående bandbredd.

--- a/body.tex
+++ b/body.tex
@@ -413,6 +413,8 @@ Rekommendationer för repeatrar i olika distrikt och län att använda CTCSS fö
 	Distrikt 7      &      79.7       &      156.7      &      210.7      &
 \end{tabular}
 
+Lägg märke till att decimalsiffran är i de flesta fall samma som distriktssiffran.
+
 \section{Bandbredd olika modulationer}
 
 Olika modulationer upptar olika bandbredd. Detta är mycket viktigt att förstå när man ställer in sin radiostation. Detta gäller särskilt att beakta i närheten av nödfrekvenser eller bandkanten. När vi talar om bandbredder här förstås den bandbredd vari minst 98 \% av signalens effekt befinner sig.
@@ -422,12 +424,14 @@ Olika modulationer upptar olika bandbredd. Detta är mycket viktigt att förstå
 	CW                  &          $<$500 Hz & Smalbandigt                           \\
 	AM                  &              6 kHz & Amplitudmodulering med fullt sidband  \\
 	SSB*                &              3 kHz & Amplitudmodulering med enkelt sidband \\
-	NFM                 &           7-12 kHz & Smalbandig FM                         \\
+	NFM**               &           7-12 kHz & Smalbandig FM                         \\
 	FM                  &             16 kHz & Normal FM                             \\
 	WFM                 &          16-75 kHz & Bredbandig FM (t.ex. rundradio)
 \end{tabular}
 
 *) För SSB gäller att USB och LSB fungerar lite olika. När man beräknar den högsta eller lägsta frekvensen utgår man från den inställda frekvensen $f$. För USB gäller då att högsta frekvensen är $f+3$ kHz. För LSB blir det $f-3$ kHz. Detta innebär att om du sänder på 80m bandet och du får sända telefoni från 3600--3800 kHz och vill lägga dig i under bandkanten och köra LSB skall du ställa in din radio på 3603 kHz som lägsta frekvens. Använd gärna lite marginal och kör exempelvis 3605 kHz i stället.
+
+*) På kortvågen används smalbandig FM med max 10 kHz modulationsbandbredd. På VHF/UHF är smalbandig FM ca 11 kHz bred med Carssons bandbreddsbegrepp.
 
 Det är vanligt att t.ex. utländska stationer kör överdriven bandbredd. Antingen som en följd av att man vill öka sin modulationsvinst, okunskap eller man har skruvat i sin radio.
 
