Ny fil för egenskaper hos de olika frekvensbanden inom HF

--- a/body-hf.tex
+++ b/body-hf.tex
@@ -143,6 +143,8 @@ YV5B   & Venezuela      & 02:50  & 00:00  & 00:10  & 00:20  & 00:30  \\
 
 \normalsize
 
+\input{egenskaper-hf}
+
 \input{bandplan-hf}
 
 \begin{landscape}
