--- a/body-hf.tex
+++ b/body-hf.tex
@@ -24,7 +24,7 @@ OBS! Detta är inte fullständigt radioreglemente naturligtvis utan endast samma
 \item IBP är International Beacon Project. Fyrarna sänder med 3 min intervaller och används för att studera utbredningen av radiosignaler globalt. Fyrarna sänder anrop och fyra 1 s toner. Anropet och första tonen sänds med 100W, därefter sänds tonerna med 10W, 1W samt 100mW.
 \item Vid AM (A3J) skall hänsyn tas så att störningar på annan trafik ej fö\-re\-kom\-mer med de sidband som då uppstår, det gäller då både övre och undre sidbandet.
 \item Ingen som helst sändning är tillåtet inom fyrsegmenten. Detta skall respekteras. Lyssna gärna på nödfrekvenserna men används dem icke, om det inte är du som svarar på ett nödsamtal! Undvik QSO allt för nära dessa också.
-\item Var särskilt uppmärksam på satelliters nerlänksfrekvenser på 10 m-bandet. I detta segment skall endast lyssning ske. Ingen sändning är tillåten här eller i skyddssegmentet strax ovanför satellitsegmentet. Tänk på att satelliters frekvens kan dopplerskiftas uppåt en hel del när de rör sig mot mottagaren.
+\item Var särskilt uppmärksam på satelliters nerlänksfrekvenser på 10\,m-bandet. I detta segment skall endast lyssning ske. Ingen sändning är tillåten här eller i skyddssegmentet strax ovanför satellitsegmentet. Tänk på att satelliters frekvens kan dopplerskiftas uppåt en hel del när de rör sig mot mottagaren.
 \end{itemize}
 
 \section{Frekvenser HF}
