--- a/body.tex
+++ b/body.tex
@@ -216,8 +216,6 @@ Första paret dela in jorden i 18x18 fält, dvs 20 grader per fält longitud och
 
 När vi kör amatörradio finns det ett antal saker att tänka på som har att göra med hur vi beter oss mot varandra på banden. Se detta som en guide till hur man bör uppträda på banden.
 
-\subsection{Generellt}
-
 En radioamatör måste vara \textbf{tolerant}. Vi delar frekvenser med många andra personer, en del av dem kommer inte ha samma uppfattning som du själv har om saker och ting. Här gäller det att vara tolerant, förstående och framför allt inte bli upprörd över personer som kanske inte beter sig som du önskade att de betedde sig.
 
 Radioamatörer är \emph{aldrig ensamma på banden} helt oavsett om någon svarar på ditt allmänna anrop eller ej så finns det i det närmaste \textbf{garanterat någon som lyssnar}. 
@@ -238,7 +236,8 @@ Vi pratar inte \textbf{nedvärderande} om personer varesig de är andra amatöre
 
 Undvik väldigt \textbf{långa sändningspass}. Ibland händer det saker hos dina motstationer som att de får ett viktigt telefonsamtal eller måste springa ut i köket för katten har rivit ner något, ett barn ramlar eller annat som gör att man måste kvickt lämna radion. Att \textbf{långprata} i sådana lägen gör det svårt att tala om ''QRX --- jag måste ta hand om en sak, anropar dig igen om 5 min.''. Enstaka gånger kanske man behöver förklara något lite längre men gör det till en vana att lämna luckor så ofta som möjligt.
 
-Nödtrafik har alltid prioritet.
+\textbf{Nödtrafik har alltid prioritet} och måste respekteras på alla
+frekvenser.
 
 \subsection{Repeatrar}
 
@@ -315,7 +314,7 @@ $$B=2f_m$$
 
 Där $f_m$ är högsta modulationsfrekvensen.
 
-\subsubsection{SSB/ESB --- Enkelt sidband, en AM-variant}
+\subsubsection{SSB/ESB -- Enkelt sidband, en AM-variant}
 
 Enkelt sidband används av radioamatörer för att minska på bandbredden samt lägga radioenergin där den behövs mest. Eftersom båda sidbanden innehåller samma information kan man filtrera bort dessa samt bärvågen innan man matar sändarens förstärkarsteg med resultatet. I mottagaren behöver man dock återskapa en referenssignal, en så kallad beat-oscillator gör detta. När man ställer in frekvensen så försöker man därmed matcha den ursprungliga frekvensen. Ligger man för långt från låter det kalle anka, kommer man för nära sidbandet låter det dovt och basigt. 
 
@@ -491,13 +490,13 @@ UKV            & Ultrakortvåg  & 88--108                     & MHz \\
 
 För radioamatörer delar man in frekvensbanden i långvåg, mellanvåg, kortvåg, VHF, UHF och SHF beroende på frekvens, se tabellen under avsnitt \ref{frekvens-vaglangd}. Dessa har lite olika utbredningsegenskaper.
 
-\textbf{Långvåg} --- Markvågsutbredning, relativt höga sändareffekter, tillförlitliga för\-bind\-el\-ser men i övre delen av frekvensbandet kortare förbindelser dagtid. På de lägsta frekvenserna erhålls med hög sändareffekt goda förbindelser på stora avstånd globalt och används även för t.ex. malmprospektering, kommunikation med ubåtar i undervattensläge.
+\textbf{Långvåg} -- Markvågsutbredning, relativt höga sändareffekter, tillförlitliga för\-bind\-el\-ser men i övre delen av frekvensbandet kortare förbindelser dagtid. På de lägsta frekvenserna erhålls med hög sändareffekt goda förbindelser på stora avstånd globalt och används även för t.ex. malmprospektering, kommunikation med ubåtar i undervattensläge.
 
-\textbf{Kortvåg} --- God rymdvågsutbredning med mycket lång räckvidd redan med låg effekt men samtidigt starkt avhängigt radiokonditionerna. Med ökande frekvens blir jonosfärreflektionen allt flackare vilket resulterar i en alltmer uttalad död zon (skip). Särskilt utmärkande för kortvågen är att den redan med låg effekt ger under gynnsamma konditioner extremt lång räckvidd via rymdvåg, ibland globalt.
+\textbf{Kortvåg} -- God rymdvågsutbredning med mycket lång räckvidd redan med låg effekt men samtidigt starkt avhängigt radiokonditionerna. Med ökande frekvens blir jonosfärreflektionen allt flackare vilket resulterar i en alltmer uttalad död zon (skip). Särskilt utmärkande för kortvågen är att den redan med låg effekt ger under gynnsamma konditioner extremt lång räckvidd via rymdvåg, ibland globalt.
 
-\textbf{Mellanvåg} --- Kombinerar egenskaperna hos angränsande delar av lång- och kortvåg, kan ge kraftig interferens mellan rymd- och markvåg som ofta upplevs som kraftig fädning. Särskilt utmärkande för mellanvågen är den i det närmaste avsaknanden av skipzon eftersom mark- och rymdvåg kompletterar varandra, jonosfärens D-skikt är heller inte särskilt uttalat i frekvensområdet dvs förbindelser via rymdvåg på korta avstånd mellan 100--300 km är möjliga även dagtid under perioder med kraftig solaktivitet.
+\textbf{Mellanvåg} -- Kombinerar egenskaperna hos angränsande delar av lång- och kortvåg, kan ge kraftig interferens mellan rymd- och markvåg som ofta upplevs som kraftig fädning. Särskilt utmärkande för mellanvågen är den i det närmaste avsaknanden av skipzon eftersom mark- och rymdvåg kompletterar varandra, jonosfärens D-skikt är heller inte särskilt uttalat i frekvensområdet dvs förbindelser via rymdvåg på korta avstånd mellan 100--300 km är möjliga även dagtid under perioder med kraftig solaktivitet.
 
-\textbf{Ultrakortvåg (VHF)} --- Förbindeleser med låg effekt och små antenner, oberoende av jonosfären men då endast i form av frirumsutbredning, dvs fram till horisonten och under påverkan av terränghinder mm. Särskilt utmärkande för UKV är att rymdvåg saknar, markvågsdämpningen till lands är total och kommunikation på högre frekvenser i princip därför bara sker vid fri sikt mellan sändare och mottagare.
+\textbf{Ultrakortvåg (VHF)} -- Förbindeleser med låg effekt och små antenner, oberoende av jonosfären men då endast i form av frirumsutbredning, dvs fram till horisonten och under påverkan av terränghinder mm. Särskilt utmärkande för UKV är att rymdvåg saknar, markvågsdämpningen till lands är total och kommunikation på högre frekvenser i princip därför bara sker vid fri sikt mellan sändare och mottagare.
 
 
 
