--- a/qso.tex
+++ b/qso.tex
@@ -12,13 +12,13 @@ När man kör FM över repeatrar på VHF/UHF är det inte lika vanligt att man b
 
 Ett anrop kan se ut ungefär såhär:
 
---- SA0MAD från SM0UEI, SA0MAD kom!
+-- SA0MAD från SM0UEI, SA0MAD kom!
 
 Här är det SA0MAD som anropas av SM0UEI. 
 
 Svaret kan se ut ungefär såhär:
 
---- SM0UEI från SA0MAD kom!
+-- SM0UEI från SA0MAD kom!
 
 Därefter övergår radiosamtalet i dialog eller meddelandesändning.
 
@@ -26,39 +26,39 @@ Därefter övergår radiosamtalet i dialog eller meddelandesändning.
 
 Används när man inte ropar på någon särskild motstation utan önskar samtal med vem som helst. På svenska använder man ofta just orden ''allmänt anrop'' medan på engelska är det vanligare att man uttalar CQ (seek you). Ett allmänt androp kan se ut såhär:
 
---- Allmänt anrop, allmänt anrop, allmänt anrop från SM0UEI SM0UEI SM0UEI kallar allmänt anrop och lyssnar.
+-- Allmänt anrop, allmänt anrop, allmänt anrop från SM0UEI SM0UEI SM0UEI kallar allmänt anrop och lyssnar.
 
 Eller på engelska:
 
---- CQ CQ CQ this is SM0UEI calling CQ CQ CQ and standing by.
+-- CQ CQ CQ this is SM0UEI calling CQ CQ CQ and standing by.
 
 \subsubsection{Meddelandesändning}
 
---- SA0MAD från SM0UEI, tack för svaret. Din signal är 59 hos mig, mitt QTH är JO89WA och namnet är Anders. SA0MAD från SM0UEI kom.
+-- SA0MAD från SM0UEI, tack för svaret. Din signal är 59 hos mig, mitt QTH är JO89WA och namnet är Anders. SA0MAD från SM0UEI kom.
 
---- SM0UEI från SA0MAD, tack för rapporten. Din signal är 57 hos mig, jag befinner mi i JO89VK men kommer under kvällen byta QTH. Jag kommer då vara QRV på 3663 kHz. QSL? SM0UEI från SA0MAD.
+-- SM0UEI från SA0MAD, tack för rapporten. Din signal är 57 hos mig, jag befinner mi i JO89VK men kommer under kvällen byta QTH. Jag kommer då vara QRV på 3663 kHz. QSL? SM0UEI från SA0MAD.
 
---- SA0MAD från SM0UEI, QSL på det, QRX 19.30 på frekvens 3663 kHz. 
+-- SA0MAD från SM0UEI, QSL på det, QRX 19.30 på frekvens 3663 kHz. 
 
 \subsubsection{Avslutning}
 
---- SA0MAD från SM0UEI, tack för rapport och vi hörs senare, 73, slut kom
+-- SA0MAD från SM0UEI, tack för rapport och vi hörs senare, 73, slut kom
 
---- SM0UEI från SA0MAD, 73 tillbaka, klart slut.
+-- SM0UEI från SA0MAD, 73 tillbaka, klart slut.
 
 \subsection{Contest}
 
 Under contest är det vanligtvis så att man kör ett relativt kort QSO för att hinna så många som möjligt. Under constestförhållanden utväxlar man som regel signal, sekvensnummer, signalrapport med varandra. Ofta lägger man till "contest" i sitt anrop exempelvis:
 
---- CQ Contest CQ Contest CQ Contest SM0UEI SM0UEI CQ Contest
+-- CQ Contest CQ Contest CQ Contest SM0UEI SM0UEI CQ Contest
 
 Efter man etablerat kontakt utväxlar man signalrapporter och sekvensnummer
 
---- SM0UEI from SA0MAD, you are 59 here and sequence 28, SM0UEI from SA0MAD.
+-- SM0UEI from SA0MAD, you are 59 here and sequence 28, SM0UEI from SA0MAD.
 
---- SA0MAD from SM0UEI, QSL your signals are 58 and my sequence is 112, QSL? SA0MAD from SM0UEI
+-- SA0MAD from SM0UEI, QSL your signals are 58 and my sequence is 112, QSL? SA0MAD from SM0UEI
 
---- QSL and good luck, SM0UEI from SA0MAD
+-- QSL and good luck, SM0UEI from SA0MAD
 
 \subsubsection{Pile-up}
 
@@ -72,12 +72,12 @@ Kör korta QSO. Utbyt snabbt den information som behövs och ta sedan nästa. Ha
 
 Använd ett standardmönster när du kör:
 
---- SM0UEI CQ CQ CQ de SM0UEI 10 UP
+-- SM0UEI CQ CQ CQ de SM0UEI 10 UP
 
---- SM0UEI de ON3XYZ you are 59 sequence 122, QSL?
+-- SM0UEI de ON3XYZ you are 59 sequence 122, QSL?
 
---- ON3XYZ SM0UEI QSL, 59 back to you, sequence 312 QSL?
+-- ON3XYZ SM0UEI QSL, 59 back to you, sequence 312 QSL?
 
---- QSL. CQ CQ CQ de SM0UEI 10 UP ...
+-- QSL. CQ CQ CQ de SM0UEI 10 UP ...
 
 Om du försöker nå en motstation med pile-up var uppmärksam på dennes sändningar och vänta på din tur. Tala gärna om signal och var du sänder från men släpp sedan fram andra. Tänk på hur du själv skulle vilja att en pile-up på din egen station skulle vilja agera. Den gyllene regeln är också alltid lyssna först --- sänd sedan!
