Tillhyfsning och lite ny info

--- a/qso.tex
+++ b/qso.tex
@@ -1,8 +1,14 @@
 \subsection{QSO}
 
-Konsten att genomföra ett radiosamtal (QSO) i olika sammanhang.
+Konsten att genomföra ett radiosamtal (QSO) i olika sammanhang. Ofta
+blir folk nervösa i början för hur detta går till. Man säger sin
+signal och motstationens i fel ordning eller liknande.
 
-\subsubsection{Radiosamtalets delar}
+Man börjar alltid med motstationens signal. Det bör fallas naturligt
+att ropa så och man avslutar anropet med sin egen signal så att
+motstationen dels vet vem som anropar men också andra hör. Kanske vill
+en annan station ha ett utbyte med dig om du inte får svar från den
+tilltänkta.
 
 Ett radiosamtal består som regel av tre delar. Först sker ett anrop, när kontakt etablerats utväxlas ett antal meddelande (dialog) och när man är klarar avslutas samtalet. Dessa tre delar är ganska standard. Man följer detta ganska strikt t.ex. på kortvågen där telefoni oftast innebär SSB. Anledningen är enkel, det går inte höra när någon släpper sändtangenten eller bara är tyst och tänker.
 
