--- a/qso.tex
+++ b/qso.tex
@@ -56,7 +56,7 @@ Eller på engelska:
 
 Ibland kan det bli väldigt många motstationer samtidigt som ropar. Nu gäller det att spetsa öronen! Först gäller det att sålla. Rara signaler från långtbortistan ger mer poäng i en contest som regel eller från länder du inte kört osv beroende på regler. Försök att sålla med "du som sänder från Florida" eller "VK7 kom igen" osv till det är en station kvar. Kör den snabbt, ropa CQ igen och börja sålla.
 
-Direkt när det uppstår en pile-up är det effektivt att köra split. Dvs du lyssnar 5-10 kHz upp eller ned från den frekvens du sänder på. Det gör det lättare för dig att behålla kommandot under pile-up. Ligger du och sänder i ett frekvensområde som är särskilt ägnat för DX är det smart att lägga Rx-frekvensen strax utanför. Det undviker att man stökar ned i DX-bandet.
+Direkt när det uppstår en pile-up är det effektivt att köra split. Dvs du lyssnar 5--10\,kHz upp eller ned från den frekvens du sänder på. Det gör det lättare för dig att behålla kommandot under pile-up. Ligger du och sänder i ett frekvensområde som är särskilt ägnat för DX är det smart att lägga Rx-frekvensen strax utanför. Det undviker att man stökar ned i DX-bandet.
 
 Kör du split skall du säga det efter varje sändning. "CQ CQ CQ de Sierra Mike Zero Uniform Echo India listening 5 up" exempelvis. På CW bör en split vara minst 2 kHz och på SSB bör den vara minst 5 kHz ännu hellre 10 kHz. Tänk på att när du startar din split måste du kolla så att båda frekvenserna är ok. Låt inte din pile-up sprida ut sig för mycket även om det är kanske enklare för dig så är risken stor att den stör någon annan. 
 
