Frekvenstabel för 31 MHz tillagd

--- a/body-vhf.tex
+++ b/body-vhf.tex
@@ -7,7 +7,59 @@ innan en frekvens brukas.
 
 Effekten i tabellen är ustrålad effekt PEP om inte annat anges.
 
-\subsubsection{Jakt och jordbruksfrekvenser 155 MHz}
+\subsubsection{Jaktfrekvenser 31\,MHz}
+
+Frekvenserna på detta band var tidigare till för enbart jakt. I dag är de öppna för övrig landmobil trafik och kan nyttjas till fritidskommunikation av annat slag.
+
+Högsta effekt är 5\,W och maximal sändningscykel är 10\% vilket betyder att under en timme får man sända maximalt 6 minuter. 
+
+I oktober 2012 utökades de gamla jaktkanalerna med ett antal nya kanaler vilket skedde i oktober 2012. De har ingen officiell benämning men jag har valt att numrera upp dem efter de traditionella numren med början på 25. Kanal 24 har tidigare haft en frekvens som inte längre är i bruk så det vore förvirrande att använda den. Nya kanaler är markerade i listan med asterisk.
+
+\begin{longtable}{rll}
+\textbf{Frekvens} & \textbf{Benämning} & \textbf{Tidigare ben.} \\ \hline \endhead
+30,930            & Jakt 1             &                        \\
+30,940            & Jakt 25*           &                        \\
+30,950            & Jakt 26*           &                        \\
+30,960            & Jakt 27*           &                        \\
+30,970            & Jakt 28*           &                        \\
+31,030            & Jakt 29*           &                        \\
+31,040            & Jakt 2             &                        \\
+31,050            & Jakt 3             & Kanal 1 Eller D        \\
+31,060            & Jakt 4             & Kanal 2 Eller A        \\
+31,070            & Jakt 5             &                        \\
+31,080            & Jakt 6             &                        \\
+31,090            & Jakt 7             &                        \\
+31,100            & Jakt 8             &                        \\
+31,110            & Jakt 9             &                        \\
+31,120            & Jakt 10            &                        \\
+31,130            & Jakt 30*           &                        \\
+31,140            & Jakt 11            &                        \\
+31,150            & Jakt 12            &                        \\
+31,160            & Jakt 13            & Kanal 3 Eller B        \\
+31,170            & jakt 31*           &                        \\
+31,180            & Jakt 14            &                        \\
+31,190            & Jakt 15            &                        \\
+31,200            & Jakt 16            &                        \\
+31,210            & Jakt 17            &                        \\
+31,220            & Jakt 18            &                        \\
+31,230            & Jakt 32*           &                        \\
+31,240            & Jakt 33*           &                        \\
+31,250            & Jakt 19            & Kanal 4 eller E        \\
+31,260            & Jakt 20            & Kanal 5 eller C        \\
+31,270            & Jakt 21            &                        \\
+31,290            & Jakt 34*           &                        \\
+31,300            & Jakt 35*           &                        \\
+31,310            & Jakt 36*           &                        \\
+31,320            & Jakt 37*           &                        \\
+31,330            & Jakt 22            & Kanal 6 eller F        \\
+31,340            & Jakt 23            &                        \\
+31,350            & Jakt 38*           &                        \\
+31,560            & Jakt 39*           &                        \\
+31,370            & Jakt 40*           &                        \\
+\end{longtable}
+
+
+\subsubsection{Jakt och jordbruksfrekvenser 155\,MHz}
 \begin{longtable}{rlrl}
 \textbf{Frekvens} & \textbf{Benämning} & \textbf{Effekt} & \textbf{Användningsområde}   \\ \hline \endhead
 155,425           & Jakt K1            & 5 W             & Jakt, Jordbruk               \\
@@ -26,7 +78,7 @@ Effekten i tabellen är ustrålad effekt PEP om inte annat anges.
 \end{itemize}
 \normalsize
 
-\subsubsection{Öppna PMR-bandet på 446 MHz}
+\subsubsection{Öppna PMR-bandet på 446\,MHz}
 \begin{longtable}{rlrl}
 \textbf{Frekvens} & \textbf{Benämning} & \textbf{Effekt} & \textbf{Användningsområde} \\ \hline \endhead
 446,00625         & PMR446 K1          & 500 mW          & PMR$^N$                    \\
