Ny font och 31 Mhz finputsat

--- a/rhb-print-A4.tex
+++ b/rhb-print-A4.tex
@@ -9,6 +9,9 @@
 \usepackage{pdflscape}
 \usepackage{longtable}
 \usepackage{textcomp}
+%\usepackage{newcent}
+%\usepackage{eulervm}
+\usepackage{fourier}
 \raggedbottom
 
 \input{init-full}
